[gd_scene load_steps=2 format=3 uid="uid://4dx8fbvpsacl"]

[ext_resource type="Script" path="res://scripts/gun.gd" id="1_2whdu"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_2whdu")

[node name="BulletSpawn" type="Marker2D" parent="." groups=["down_spawn", "right_spawn", "spawn_points"]]
unique_name_in_owner = true
position = Vector2(15, 15)
rotation = 0.785398
scale = Vector2(1, 1)

[node name="DownRightBulletSpawn" type="Marker2D" parent="." groups=["down_spawn", "right_spawn", "spawn_points"]]
unique_name_in_owner = true
position = Vector2(15, 15)
rotation = 0.785398

[node name="DownBulletSpawn" type="Marker2D" parent="." groups=["down_spawn", "spawn_points"]]
unique_name_in_owner = true
position = Vector2(9.53674e-07, 15)
rotation = 1.5708

[node name="DownLeftBulletSpawn" type="Marker2D" parent="." groups=["down_spawn", "left_spawn", "spawn_points"]]
unique_name_in_owner = true
position = Vector2(-15, 15)
rotation = -3.92699

[node name="LeftBulletSpawn" type="Marker2D" parent="." groups=["left_spawn", "spawn_points"]]
unique_name_in_owner = true
position = Vector2(-15, 9.53674e-07)
rotation = 3.14159

[node name="UpLeftBulletSpawn" type="Marker2D" parent="." groups=["left_spawn", "spawn_points", "up_spawn"]]
unique_name_in_owner = true
position = Vector2(-15, -15)
rotation = -2.35619

[node name="UpBulletSpawn" type="Marker2D" parent="." groups=["spawn_points", "up_spawn"]]
unique_name_in_owner = true
position = Vector2(0, -15)
rotation = -1.5708

[node name="UpRightBulletSpawn" type="Marker2D" parent="." groups=["right_spawn", "spawn_points", "up_spawn"]]
unique_name_in_owner = true
position = Vector2(15, -15)
rotation = -0.785398

[node name="RightBulletSpawn" type="Marker2D" parent="." groups=["right_spawn", "spawn_points"]]
unique_name_in_owner = true
position = Vector2(15, 0)

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
